# ParkingLot_OOD

./: CMakeLists.txt  Makefile  ParkingLot_Simulator  readme.md  requirements.md
include/: GateManager.h  ParkingLot.h  PaymentManager.h  Simulator.h  Ticket.h  Vehicle.h  example.h  pch.h
src/: ParkingLot.cpp  Simulator.cpp  Vehicle.cpp  main.cpp
